Fixed links in profile description spacing issue
ref https://linear.app/ghost/issue/AP-520/profile-view-description-positionstructure-bug

--- a/apps/admin-x-activitypub/src/styles/index.css
+++ b/apps/admin-x-activitypub/src/styles/index.css
@@ -25,31 +25,25 @@ animation: bump 0.3s ease-in-out;
 }
 
 .ap-note-content a, .ap-profile-content a {
-  /* color: rgb(236 72 153) !important; */
   color: rgb(37 99 235) !important;
   word-break: break-all;
 }
 
 .ap-note-content a:hover, .ap-profile-content a:hover {
-  /* color: rgb(190, 25, 99) !important; */
   color: rgb(29 78 216) !important;
   text-decoration: underline !important;
 }
 
-.ap-note-content span.invisible {
+.ap-note-content span.invisible, .ap-profile-content span.invisible {
   display: none;
 }
 
-.ap-note-content a:not(.hashtag) span.ellipsis:after {
+.ap-note-content a:not(.hashtag) span.ellipsis:after, .ap-profile-content a:not(.hashtag) span.ellipsis:after, .ap-likes .ellipsis::after {
   content: "…";
 }
 
 .ap-note-content p + p {
   margin-top: 1.5rem !important;
-}
-
-.ap-likes .ellipsis::after {
-  content: "…";
 }
 
 .ap-likes .invisible {
